--- a/blog/templates/pages/home.html
+++ b/blog/templates/pages/home.html
@@ -1,1 +1,14 @@
-<h1>Hi, {{ currentuser }}</h1>
+{% include 'partials/header.html' %}
+
+    <h3>Hi, {{ currentuser }}</h3>
+    <ul>
+        {% for post in posts %}
+            <li>
+                <a href="{% url 'single' post.id %}">
+                    {{ post.title }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+{% include 'partials/footer.html' %}
+
